# adora

./: Cargo.toml  Makefile  README.md  _typos.toml
.github/workflows/: ci.yml  docker-image.yml  nightly.yml  pip-release.yml
apis/python/node/: Cargo.toml
binaries/cli/src/: common.rs  lib.rs
binaries/coordinator/: Cargo.toml
binaries/coordinator/src/: control.rs  events.rs  handlers.rs  lib.rs  state.rs  topic_subscriber.rs  ws_control.rs  ws_daemon.rs
binaries/coordinator/tests/: ws_daemon_tests.rs
binaries/daemon/src/: lib.rs
binaries/ros2-bridge-node/: Cargo.toml
ci-templates/: dataflow-smoke.yml  python-node-ci.yml  rust-node-ci.yml
docs/: cli.md  migration-from-0.x.md  plan-consistency-sweep-2026-04-17.md  plan-dora-1.0-consolidation.md  realtime-tuning.md  testing-matrix.md
examples/cross-language/: python_receiver.py  python_sender.py
examples/python-async-demo/: README.md  dataflow.yaml  receive_data.py  send_data.py
examples/python-echo/: checker.py  echo.py  sender.py
examples/python-parquet-recorder/: camera.py  recorder.py
examples/python-recv-async/: dataflow.yml  receiver.py
examples/python-yolo-detection/: object_detection.py  plot.py  webcam.py
libraries/extensions/ros2-bridge/arrow/: Cargo.toml
scripts/: smoke-all.sh
scripts/qa/: architecture-check.sh  ci-lint.sh  ci-parity-check.sh  publish-order-check.sh  release-config-check.sh  release-dry-run.sh  rust-version-check.sh  test-unwrap-budget.sh  unwrap-budget.sh
tests/: example-smoke.rs  ws-cli-e2e.rs
tests/fixtures/: zenoh-debug-dataflow.yml
(+34 files in other folders)
