[package]
name = "dora-ros2-bridge-arrow"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Apache Arrow conversion utilities for the dora ROS2 bridge"

[dependencies]
dora-ros2-bridge-msg-gen = { path = "../msg-gen" }
arrow = { workspace = true }
eyre = { workspace = true }
ros2-client = "0.8"
serde = { workspace = true }
